<resources>
    <string name="app_name">To Do App</string>
    <string name="login_placeholder">Пользователь</string>
    <string name="password_placeholder">Пароль</string>
    <string name="singin_button_label">Вход</string>
    <string name="login_check_text">Успех</string>
    <string name="tasks_label">Задачи</string>
    <string name="group_tasks_label">Хранилище</string>
    <string name="task_fragment_header">Поиск задач</string>
    <string name="task_item_name_label">Задача</string>
    <string name="task_item_place_label">Точка расположения</string>
    <string name="task_item_address_label">Адрес</string>
    <string name="task_item_activity_label">Активность</string>
    <string name="task_item_select_button_label">Выбрать</string>
    <string name="check_list_item_check">Чек</string>
    <string name="check_listitem_save_button_label">Сохранить</string>


</resources>