<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditTaskFragment">
    <data>
        <variable
            name="task"
            type="com.example.firsttestapp.data.model.Task" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/edit_task_item_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/edit_task_item_inner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/edit_task_item_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10sp"
                        android:text="@string/task_item_name_label" />

                    <TextView
                        android:id="@+id/edit_task_item_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{task.name}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/edit_task_item_inner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/edit_task_item_place_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10sp"
                        android:text="@string/task_item_place_label" />

                    <TextView
                        android:id="@+id/edit_task_item_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{task.relatedPlace}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/edit_task_item_inner3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/edit_task_item_address_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10sp"
                        android:text="@string/task_item_address_label" />

                    <TextView
                        android:id="@+id/edit_task_item_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{task.address}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/edit_task_item_inner4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/edit_task_item_activity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10sp"
                        android:text="@string/task_item_activity_label" />

                    <TextView
                        android:id="@+id/edit_task_item_activity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(task.activity)}" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/check_list_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>
</layout>